[gd_scene load_steps=22 format=3 uid="uid://b1awlsnyrpsd"]

[ext_resource type="PackedScene" uid="uid://imvheva33w7b" path="res://player/player.tscn" id="1_6fn6l"]
[ext_resource type="Script" path="res://SCRIPTS/Camera2D.gd" id="1_6gr8w"]
[ext_resource type="PackedScene" uid="uid://cfehnavwrdbox" path="res://user_interface/people-count/people_counts.tscn" id="3_5jgbw"]
[ext_resource type="PackedScene" uid="uid://du4i8qr75q4eo" path="res://enemy_spawner_new.tscn" id="3_sg5y6"]
[ext_resource type="Texture2D" uid="uid://ddfbvd0gy3ru2" path="res://user_interface/oxygen-bar/oxygen_bar_under.png" id="4_i0ckq"]
[ext_resource type="Script" path="res://SCRIPTS/OxygenProgressBar.gd" id="4_idx0j"]
[ext_resource type="Texture2D" uid="uid://b7kkqvafwnje7" path="res://user_interface/oxygen-bar/oxygen_bar_progress.png" id="5_wuwum"]
[ext_resource type="FontFile" uid="uid://b5b3887h20yu8" path="res://user_interface/fonts/font_1.ttf" id="7_uga1m"]
[ext_resource type="FontFile" uid="uid://bynf5lvmpg18r" path="res://user_interface/fonts/font_2.ttf" id="9_bh6s2"]
[ext_resource type="Script" path="res://SCRIPTS/Points.gd" id="10_s6gkb"]
[ext_resource type="Script" path="res://SCRIPTS/GameOver.gd" id="11_ilok1"]
[ext_resource type="Script" path="res://SCRIPTS/OxygenZone.gd" id="12_a1okn"]
[ext_resource type="Shader" path="res://SCRIPTS/water.gdshader" id="13_6r0s5"]
[ext_resource type="Texture2D" uid="uid://chx0y1dbt2g4l" path="res://scenes/environment/sand_bottom.png" id="14_ilyp5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7chcg"]
size = Vector2(276, 35)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8rq62"]
shader = ExtResource("13_6r0s5")
shader_parameter/strength = Vector2(2, 2)
shader_parameter/speed = 1.0
shader_parameter/seed = 0.0

[sub_resource type="QuadMesh" id="QuadMesh_st0lc"]
size = Vector2(400, 7.685)
subdivide_width = 8

[sub_resource type="QuadMesh" id="QuadMesh_5mmr5"]
size = Vector2(400, 32)
subdivide_width = 8

[sub_resource type="QuadMesh" id="QuadMesh_trd0v"]
size = Vector2(400, 40)
subdivide_width = 8

[sub_resource type="QuadMesh" id="QuadMesh_y4mr5"]
size = Vector2(400, 72)
subdivide_width = 8

[sub_resource type="QuadMesh" id="QuadMesh_inhi4"]
size = Vector2(400, 72)
subdivide_width = 8

[node name="Game" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(128, 70)
script = ExtResource("1_6gr8w")

[node name="Player" parent="." instance=ExtResource("1_6fn6l")]
position = Vector2(18, 49)

[node name="EnemySpawner_new" parent="." instance=ExtResource("3_sg5y6")]

[node name="TimerPersonSpawner" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Node2D" type="Node2D" parent="CanvasLayer"]
position = Vector2(128, 120)
script = ExtResource("4_idx0j")

[node name="FlashTimer" type="Timer" parent="CanvasLayer/Node2D"]
wait_time = 0.1
one_shot = true

[node name="OxygenProgressBar" type="TextureProgressBar" parent="CanvasLayer/Node2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -4.5
offset_right = 50.0
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
value = 80.0
nine_patch_stretch = true
stretch_margin_left = 4
stretch_margin_right = 4
texture_under = ExtResource("4_i0ckq")
texture_progress = ExtResource("5_wuwum")

[node name="Label" type="Label" parent="CanvasLayer/Node2D/OxygenProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -13.0
offset_right = 29.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("7_uga1m")
theme_override_font_sizes/font_size = 8
text = "Oxygen"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Red" type="Label" parent="CanvasLayer/Node2D/OxygenProgressBar"]
layout_mode = 0
offset_left = 80.0
offset_top = 2.0
offset_right = 99.0
offset_bottom = 13.0
rotation = 0.00378758
theme_override_colors/font_color = Color(0.635294, 0, 0, 1)
theme_override_font_sizes/font_size = 3
text = "░░░░░░"

[node name="PeopleCounts" parent="CanvasLayer" instance=ExtResource("3_5jgbw")]
position = Vector2(8, 9)

[node name="Points" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 19.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0.184314, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("9_bh6s2")
theme_override_font_sizes/font_size = 10
text = "0"
horizontal_alignment = 1
script = ExtResource("10_s6gkb")

[node name="GameOver" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_ilok1")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.141176, 0.266667, 1)

[node name="Game_overLabel" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -24.305
offset_bottom = 1.69501
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_uga1m")
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -5.00001
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_uga1m")
theme_override_font_sizes/font_size = 8
text = "Score: 1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScore" type="Label" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 7.565
offset_bottom = 33.565
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_uga1m")
theme_override_font_sizes/font_size = 7
text = "HighScore 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverDealy" type="Timer" parent="CanvasLayer/GameOver"]
wait_time = 0.5
one_shot = true

[node name="OxygenZone" type="Area2D" parent="."]
script = ExtResource("12_a1okn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="OxygenZone"]
position = Vector2(126, 11)
shape = SubResource("RectangleShape2D_7chcg")

[node name="Environment" type="Node2D" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="Environment"]
z_index = -9
material = SubResource("ShaderMaterial_8rq62")
position = Vector2(132, 31)
scale = Vector2(0.7, 1)
mesh = SubResource("QuadMesh_st0lc")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="Environment"]
modulate = Color(0.0470588, 0.901961, 0.94902, 1)
z_index = -11
material = SubResource("ShaderMaterial_8rq62")
position = Vector2(132, 47.99)
scale = Vector2(0.7, 1)
mesh = SubResource("QuadMesh_5mmr5")

[node name="MeshInstance2D3" type="MeshInstance2D" parent="Environment"]
modulate = Color(0, 0.596078, 0.858824, 1)
z_index = -10
material = SubResource("ShaderMaterial_8rq62")
position = Vector2(128, 79)
scale = Vector2(0.7, 1)
mesh = SubResource("QuadMesh_trd0v")

[node name="MeshInstance2D4" type="MeshInstance2D" parent="Environment"]
modulate = Color(0.117647, 0.341176, 0.611765, 1)
z_index = -10
material = SubResource("ShaderMaterial_8rq62")
position = Vector2(120, 119)
scale = Vector2(0.7, 1)
mesh = SubResource("QuadMesh_y4mr5")

[node name="MeshInstance2D5" type="MeshInstance2D" parent="Environment"]
modulate = Color(0.12549, 0.207843, 0.384314, 1)
z_index = -8
material = SubResource("ShaderMaterial_8rq62")
position = Vector2(120, 173)
scale = Vector2(0.7, 1)
mesh = SubResource("QuadMesh_inhi4")

[node name="Sprite2D" type="Sprite2D" parent="Environment"]
z_index = 10
position = Vector2(123, 201)
texture = ExtResource("14_ilyp5")

[connection signal="timeout" from="TimerPersonSpawner" to="EnemySpawner_new" method="_on_timer_person_spawner_timeout"]
[connection signal="timeout" from="CanvasLayer/Node2D/FlashTimer" to="CanvasLayer/Node2D" method="_on_flash_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/GameOver/GameOverDealy" to="CanvasLayer/GameOver" method="_on_game_over_dealy_timeout"]
[connection signal="area_entered" from="OxygenZone" to="OxygenZone" method="_on_area_entered"]
